# cur

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
usr.bin/false/: false.rs
utils/basename/: Cargo.toml
utils/basename/src/: lib.rs  main.rs
utils/binbox/: Cargo.toml
utils/binbox/src/: lib.rs  main.rs
utils/false/: Cargo.toml
utils/false/src/: lib.rs  main.rs
utils/true/: Cargo.toml
utils/true/src/: lib.rs  main.rs
