#cargo-features = ["strip"]  # Not in stable yet

[package]
name = "binbox"
description = "POSIX core utilities written in Rust"
version = "0.0.1"

authors = ["Johnathan C Maudlin <jcmdln@gmail.com>"]
edition = "2018"
keywords = ["POSIX", "utilities", "coreutils", "binutils"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/jcmdln/binbox"

[profile.release]
lto = true
#strip = true  # Not in stable yet
