[package]
name = "binbox"
description = "POSIX core utilities written in Rust"
version = "0.0.1"

authors = ["Johnathan C Maudlin <jcmdln@gmail.com>"]
edition = "2018"
keywords = ["POSIX", "utilities", "coreutils", "binutils"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/jcmdln/binbox"

[profile.release]
lto = true

# https://github.com/rust-lang/rust/issues/72110
# panic = "abort"
# strip = true
