[package]
authors = ["Johnathan C Maudlin <jcmdln@gmail.com>"]
description = "POSIX core utilities written in Rust"
edition = "2018"
keywords = ["POSIX", "utilities", "coreutils", "binutils"]
license-file = "LICENSE"
name = "binbox"
readme = "README.md"
repository = "https://github.com/jcmdln/binbox"
version = "0.0.1"

[profile.release]
lto = true

# https://github.com/rust-lang/rust/issues/72110
# panic = "abort"
# strip = true
